Fix & Update code
- Fix css styles (some styles not working properly as intended)
- Fix responsive grid style to adapt original design
- Update form validation (more simple and better structured)
- Fix validation not showing error
- Clean and fix project structure (improve for vercel deployment)

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,24 +1,24 @@
 .attribution {
-  font-size: 11px;
-  color: #fff;
+	font-size: 11px;
+	color: #fff;
 
-  margin: auto;
-  margin-block-end: 40px;
+	margin-inline: auto;
+	margin-block: 1rem;
+	max-height: min-content;
 }
 .attribution a {
-  color: hsl(132, 86%, 75%);
+	color: hsl(132, 86%, 75%);
 }
 body {
-  min-height: 100svh;
-  background: #242742;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+	min-height: 100svh;
+	background: #242742;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 2rem;
 }
 
 main {
-  width: 100%;
-  margin-block-start: 64px;
+	width: 100%;
 }
