--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,46 +1,45 @@
 .container {
-  display: grid;
-  align-items: start;
+	display: grid;
+	align-items: start;
+	max-width: 58rem;
+	margin: auto;
+	row-gap: 2.5rem;
+	padding-bottom: 2.5rem;
+	background: #fff;
 
-  margin: auto;
-  row-gap: 2.5rem;
-  padding-bottom: 2.5rem;
-  background: #fff;
-
-  justify-content: center;
-  &__img {
-    height: 100%;
-    padding-inline: 32px;
-  }
-  &__info {
-    padding-inline: 32px;
-    order: 2;
-  }
-  &__title {
-    margin-bottom: 1.5rem;
-  }
-  &__text {
-    margin-bottom: 1.5rem;
-  }
-  &__list {
-    margin-bottom: 2.5rem;
-  }
+	justify-content: center;
+	&__img {
+		height: 100%;
+	}
+	&__info {
+		padding-inline: 32px;
+		order: 2;
+	}
+	&__title {
+		margin-bottom: 1.5rem;
+	}
+	&__text {
+		margin-bottom: 1.5rem;
+	}
+	&__list {
+		margin-bottom: 2.5rem;
+	}
 }
 @media (min-width: 50rem) {
-  .container {
-    grid-template-columns: auto 1fr;
-    border-radius: 2.25rem;
-    box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.25);
-    padding: 2rem;
-    max-width: 1250px;
-    column-gap: 1.5rem;
-    align-items: flex-end;
-    &__img {
-      width: 100%;
-    }
-    &__info {
-      order: revert;
-      padding-inline: revert;
-    }
-  }
+	.container {
+		grid-template-columns: auto 1fr;
+		border-radius: 2.25rem;
+		box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.25);
+		padding: 2rem;
+		column-gap: 1.5rem;
+		align-items: center;
+		&__img {
+			width: 100%;
+		}
+		&__info {
+			width: 100%;
+			order: 0;
+			padding-inline: 40px;
+		}
+	}
 }
